Fix chapter title texts overlapping in multiline.

--- a/raw/theme/html/html.css
+++ b/raw/theme/html/html.css
@@ -169,6 +169,7 @@ div.toc-title {
 
 section[data-type="chapter"] h1, section[data-type="preface"] h1 { 
   font-size: 2.3em;
+  line-height: 1em;
   margin: 40px 0 15px 0;
 }
 
